# kai_tank

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  USER_MANUAL.md  pyproject.toml  tank_battle.py
.github/workflows/: pages.yml
backend/: .env.example  README.md  go.mod
backend/cmd/server/: main.go
backend/internal/app/: server.go
backend/internal/model/: score.go
backend/internal/store/: score_store.go
frontend/: index.html
frontend/web/: db.js  styles.css
src/tank_game/: __init__.py  __main__.py  config.py  entities.py  game.py  input_state.py  namegen.py  scoring.py  storage.py
tests/: test_scoring.py  test_storage.py
web/: db.js  game.js  main.js
