[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tank-battle-sergiokai"
version = "0.1.0"
description = "Tank Battle game built with pygame"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "sergiokai" }
]
dependencies = [
  "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "pre-commit>=3.7.0",
]

[project.scripts]
tank-battle = "tank_game.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
